--- a/WebApplication/TMS/index.html
+++ b/WebApplication/TMS/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="plugins/jvectormap/jquery-jvectormap-1.2.2.css">
     <link rel="stylesheet" href="plugins/datatables/dataTables.bootstrap.css">
+    <link rel="stylesheet" href="plugins/bootstrap-select-1.10.0/css/bootstrap-select.css">
     <link rel="stylesheet" href="dist/css/AdminLTE.css">
     <link rel="stylesheet" href="dist/css/skins/_all-skins.min.css">
 </head>
@@ -27,6 +28,8 @@
 <script src="bootstrap/js/bootstrap.min.js"></script>
 <script src="plugins/fastclick/fastclick.min.js"></script>
 <script src="plugins/director/director.min.js"></script>
+<script src="plugins/bootstrap-select-1.10.0/js/bootstrap-select.js"></script>
+
 <script src="dist/js/app.min.js"></script>
 <script src="dist/js/router.js"></script>
 <script src="dist/js/services/service.js"></script>
@@ -36,6 +39,7 @@
 <script src="dist/js/pages/task.js"></script>
 <script src="dist/js/pages/project.js"></script>
 <script src="dist/js/filters/customFilter.js"></script>
+<script src="dist/js/mainComponents.js"></script>
 <script src="plugins/sparkline/jquery.sparkline.min.js"></script>
 <script src="plugins/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
 <script src="plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
