--- a/WebApplication/TMS/index.html
+++ b/WebApplication/TMS/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Dashboard</title>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="plugins/jvectormap/jquery-jvectormap-1.2.2.css">
     <link rel="stylesheet" href="plugins/datatables/dataTables.bootstrap.css">
-    <link rel="stylesheet" href="plugins/bootstrap-select-1.10.0/css/bootstrap-select.css">
+    <link rel="stylesheet" href="plugins/select2/select2.min.css">
     <link rel="stylesheet" href="dist/css/AdminLTE.css">
     <link rel="stylesheet" href="dist/css/skins/_all-skins.min.css">
 </head>
@@ -28,7 +28,15 @@
 <script src="bootstrap/js/bootstrap.min.js"></script>
 <script src="plugins/fastclick/fastclick.min.js"></script>
 <script src="plugins/director/director.min.js"></script>
-<script src="plugins/bootstrap-select-1.10.0/js/bootstrap-select.js"></script>
+<script src="plugins/sparkline/jquery.sparkline.min.js"></script>
+<script src="plugins/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
+<script src="plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
+<script src="plugins/datatables/jquery.dataTables.min.js"></script>
+<script src="plugins/datatables/dataTables.bootstrap.min.js"></script>
+<script src="plugins/chartjs/Chart.min.js"></script>
+<script src="plugins/chartjs/Chart.StackedBar.js"></script>
+<script src="plugins/select2/select2.full.min.js"></script>
+
 
 <script src="dist/js/app.min.js"></script>
 <script src="dist/js/router.js"></script>
@@ -40,13 +48,6 @@
 <script src="dist/js/pages/project.js"></script>
 <script src="dist/js/filters/customFilter.js"></script>
 <script src="dist/js/mainComponents.js"></script>
-<script src="plugins/sparkline/jquery.sparkline.min.js"></script>
-<script src="plugins/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
-<script src="plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
-<script src="plugins/datatables/jquery.dataTables.min.js"></script>
-<script src="plugins/datatables/dataTables.bootstrap.min.js"></script>
-<script src="plugins/chartjs/Chart.min.js"></script>
-<script src="plugins/chartjs/Chart.StackedBar.js"></script>
 <script src="dist/js/pages/dashboard.js"></script>
 
 </body>
