Dashboard and Task Form

--- a/WebApplication/TMS/index.html
+++ b/WebApplication/TMS/index.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="plugins/jvectormap/jquery-jvectormap-1.2.2.css">
     <link rel="stylesheet" href="plugins/datatables/dataTables.bootstrap.css">
     <link rel="stylesheet" href="plugins/select2/select2.min.css">
+    <!--<link rel="stylesheet" href="plugins/select2/select2.min.css">-->
+
+
     <link rel="stylesheet" href="dist/css/AdminLTE.css">
     <link rel="stylesheet" href="dist/css/skins/_all-skins.min.css">
 </head>
@@ -36,6 +39,9 @@
 <script src="plugins/chartjs/Chart.min.js"></script>
 <script src="plugins/chartjs/Chart.StackedBar.js"></script>
 <script src="plugins/select2/select2.full.min.js"></script>
+<script src="plugins/input-mask/jquery.inputmask.js"></script>
+<script src="plugins/input-mask/jquery.inputmask.date.extensions.js"></script>
+<script src="plugins/input-mask/jquery.inputmask.extensions.js"></script>
 
 
 <script src="dist/js/app.min.js"></script>
