--- a/WebApplication/TMS/pages/projects.html
+++ b/WebApplication/TMS/pages/projects.html
@@ -1,50 +1,4 @@
-<header class="main-header">
-
-    <!-- Logo -->
-    <a href="index2.html" class="logo">
-        <!-- mini logo for sidebar mini 50x50 pixels -->
-        <span class="logo-mini"><b>A</b>LT</span>
-        <!-- logo for regular state and mobile devices -->
-        <span class="logo-lg"><b>Admin</b>LTE</span>
-    </a>
-
-    <!-- Header Navbar: style can be found in header.less -->
-    <nav class="navbar navbar-static-top" role="navigation">
-        <!-- Navbar Right Menu -->
-        <div class="navbar-custom-menu">
-            <ul class="nav navbar-nav">
-                <!-- User Account Begin -->
-                <li class="dropdown user user-menu">
-                    <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">
-                        <img src="./dist/img/user1.png" class="user-image" alt="User Image">
-                        <span class="hidden-xs">{USER_NAME}</span>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <!-- User image -->
-                        <li class="user-header bg-yellow-active">
-                            <img src="./dist/img/user1.png" class="img-circle" alt="User Image">
-                            <p>
-                                {USER_NAME}
-                                <small>{POSITION}</small>
-                            </p>
-                        </li>
-                        <!-- Menu Footer-->
-                        <li class="user-footer bg-yellow">
-                            <div class="pull-left">
-                                <a href="#" class="btn btn-default btn-flat">Profile</a>
-                            </div>
-                            <div class="pull-right">
-                                <a href="#" class="btn btn-default btn-flat">Sign out</a>
-                            </div>
-                        </li>
-                    </ul>
-                </li>
-                <!-- User Account End -->
-            </ul>
-        </div>
-
-    </nav>
-</header>
+<nav-bar></nav-bar>
 <!-- Left side column. contains the logo and sidebar -->
 <aside class="main-sidebar">
     <!-- sidebar: style can be found in sidebar.less -->
