--- a/WebApplication/TMS/pages/dashboard.html
+++ b/WebApplication/TMS/pages/dashboard.html
@@ -77,7 +77,7 @@
                         <span class="info-box-icon bg-red"><i class="fa fa-check-square-o"></i></span>
                         <div class="info-box-content">
                             <span class="info-box-text">Completed Tasks</span>
-                            <span class="info-box-number">41,410</span>
+                            <span class="info-box-number">{{dc.countCompletedTasks}}</span>
                         </div>
                     </div>
                 </div>
@@ -389,10 +389,6 @@
                         <div class="info-box-content">
                             <span class="info-box-text">Errors Signed To You</span>
                             <span class="info-box-number">{{dc.calcError}}</span>
-                            <span class="progress-description text-info">
-                                <a href="#" class="text-white">{ERROR 1}</a>
-                                <span class="label label-default">NEW</span>
-                            </span>
                         </div>
                     </div>
                     <!-- Daily Info Box End-->
