--- a/WebApplication/TMS/index.html
+++ b/WebApplication/TMS/index.html
@@ -6,19 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Dashboard</title>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="plugins/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-    <link rel="stylesheet" href="plugins/jvectormap/jquery-jvectormap-1.2.2.css">
     <link rel="stylesheet" href="plugins/datatables/dataTables.bootstrap.css">
     <link rel="stylesheet" href="plugins/select2/select2.min.css">
-    <!--<link rel="stylesheet" href="plugins/select2/select2.min.css">-->
-
-
     <link rel="stylesheet" href="dist/css/AdminLTE.css">
     <link rel="stylesheet" href="dist/css/skins/_all-skins.min.css">
 </head>
 <body class="hold-transition skin-yellow sidebar-mini">
+
 <div class="wrapper">
     <ng-view></ng-view>
 </div>
@@ -28,21 +24,12 @@
 <script src="plugins/angular-1.5.3/angular.min.js"></script>
 <script src="plugins/angular-1.5.3/angular-route.min.js"></script>
 <script src="plugins/angular-1.5.3/angular-sanitize.min.js"></script>
-<script src="bootstrap/js/bootstrap.min.js"></script>
-<script src="plugins/fastclick/fastclick.min.js"></script>
-<script src="plugins/director/director.min.js"></script>
-<script src="plugins/sparkline/jquery.sparkline.min.js"></script>
-<script src="plugins/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
-<script src="plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
+<script src="plugins/bootstrap/js/bootstrap.min.js"></script>
 <script src="plugins/datatables/jquery.dataTables.min.js"></script>
 <script src="plugins/datatables/dataTables.bootstrap.min.js"></script>
 <script src="plugins/chartjs/Chart.min.js"></script>
 <script src="plugins/chartjs/Chart.StackedBar.js"></script>
 <script src="plugins/select2/select2.full.min.js"></script>
-<script src="plugins/input-mask/jquery.inputmask.js"></script>
-<script src="plugins/input-mask/jquery.inputmask.date.extensions.js"></script>
-<script src="plugins/input-mask/jquery.inputmask.extensions.js"></script>
-
 
 <script src="dist/js/app.min.js"></script>
 <script src="dist/js/router.js"></script>
