Poprawki do pracy

--- a/WebApplication/TMS/index.html
+++ b/WebApplication/TMS/index.html
@@ -31,7 +31,6 @@
 <script src="plugins/chartjs/Chart.StackedBar.js"></script>
 <script src="plugins/select2/select2.full.min.js"></script>
 
-<script src="dist/js/app.min.js"></script>
 <script src="dist/js/router.js"></script>
 <script src="dist/js/services/service.js"></script>
 <script src="dist/js/services/common-functions.js"></script>
@@ -42,6 +41,7 @@
 <script src="dist/js/filters/customFilter.js"></script>
 <script src="dist/js/mainComponents.js"></script>
 <script src="dist/js/pages/dashboard.js"></script>
+<script src="dist/js/pages/login.js"></script>
 
 </body>
 </html>
